--- a/cloud-taskmanage/package.json
+++ b/cloud-taskmanage/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "video.js": "^8.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
