--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,7 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tinymce/tinymce-react": "^4.3.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
